# IminSIm

./: .clang-format  .gitignore  CMakeLists.txt  Glossary.md  LICENSE  Makefile  README.md  build.bat  build.sh  format.sh  make.bat
cmake/: common.cmake
engine/: CMakeLists.txt  build.bat  build.sh
engine/src/: EntryBase.h  defines.h  engine.cpp  engine.h  logger.cpp  logger.h  window.cpp  window.h
engine/src/core/: Application.cpp  Application.h  ApplicationConfig.h  BaseGame.cpp  BaseGame.h  BaseRenderer.cpp  BaseRenderer.h  ContextConfig.h  GameBase.cpp  GameBase.h  GameRegister.cpp  GameRegister.h  Model.cpp  Model.h  RenderRegister.cpp  RenderRegister.h  SimulatorBase.cpp  SimulatorBase.h  SimulatorRegister.cpp  SimulatorRegister.h
engine/src/math/: math_defines.h  octree.cpp  octree.h
engine/src/physics/: Particle.cpp  Particle.h  Simulator.cpp  Simulator.h  SimulatorBase.cpp  SimulatorBase.h  SimulatorFactory.cpp  SimulatorFactory.h
engine/src/physics/simple/: SiimpleSimulator.cpp  SimpleSimulator.cpp  SimpleSimulator.h
engine/src/render/: LineRender.cpp  LineRender.h  LineRenderer.cpp  LineRenderer.h  PointRenderer.cpp  PointRenderer.h
engine/src/util/: logger.cpp  logger.h
launcher/: CMakeLists.txt  build.bat  build.sh
launcher/src/: main.cpp  mars_land.cpp  mars_land.h
launcher/src/demos/: info.md  mars_land.cpp  mars_land.h  mars_land_solver.h  spring_simulation.cpp  spring_simulation.h
platform/: CMakeLists.txt  build.bat  build.sh
platform/src/: idl_context.cpp  idl_context.h  idl_defines.h  idl_log.cpp  idl_log.h  idl_render.h  idl_window.h  log.cpp  log.h
platform/src/linux/: idl_log_linux.cpp  idl_window_linux.cpp  idl_window_linux.h
platform/src/render/: idl_glx_opengl_context.cpp  idl_opengl.cpp  idl_opengl.h  idl_opengl_context.h  idl_render_opengl.cpp  idl_render_opengl.h  idl_wgl_opengl_context.cpp
platform/src/render/GL/: glcorearb.h
platform/src/win32/: idl_log_win32.cpp  idl_window_win32.cpp  idl_window_win32.h
src/engine/: CMakeLists.txt  build.bat  build.sh  iminsim_defines.h  iminsim_engine.cpp  iminsim_engine.h
src/launcher/: CMakeLists.txt  build.bat  build.sh  iminsim_launcher.h  main.cpp
src/platform/: CMakeLists.txt  build.bat  build.sh  idl_defines.h  idl_logger.cpp  idl_logger.h  idl_platform.cpp  idl_platform.h
